--- a/src/main/resources/messages/validations.properties
+++ b/src/main/resources/messages/validations.properties
@@ -18,6 +18,7 @@ AssertTrue.requestJoin.agree=회원가입 약관에 동의합니다.
 Complexity.requestJoin.password=비밀번호는 알파벳 대소문자 각각 1개이상, 숫자 1개이상, 특수문자 1개 이상을 포함하세요.
 Duplicated.requestJoin.email=이미 가입된 이메일 입니다.
 NotFound.member=등록되지 않은 회원입니다.
+Duplicated.requestJoin.studentNo=이미 등록된 학번입니다.
 
 # 로그인 공통
 BadCredentials.Login=이메일 또는 비밀번호가 일치하지 않습니다.
